<resources>
    <string name="app_name">Aapka Tourist Guide</string>
    <string name="hint_text">Chhatrapati Shivaji Maharaj Terminus</string>
    <string name="description_title">Something about the place ....</string>
    <string name="test_description">The Chhatrapati Shivaji Terminus (formerly Victoria Terminus) is located in Mumbai on the Western Part of India touching the shores of the Arabian Sea. This building, designed by F. W. Stevens, is spread across a 2.85 hectare area. The terminal was built over a period of 10 years starting in 1878. This is one of the finest functional Railway Station buildings of the world and is used by more than three million commuters daily. This property is an outstanding example of Victorian Gothic Architectural Revival in India, blended with the themes derived from Indian Traditional Architecture.</string>
    <string name="add_a_review">Add A Review</string>
    <string name="reviews_by_people">CLICK TO SEE WHAT OTHERS THINK OF THIS PLACE</string>
    <string name="location">Location: </string>
    <string name="entry_fees">Entry Fees:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">New to this app? Register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="hey_rover_welcome">Hey Rover, Welcome!!!</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="view_locations_by_category">View Locations By Category</string>
    <string name="explore_nearby">Explore Nearby</string>
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="explore_india">Explore India</string>
    <string name="things_to_do">Things to do....</string>
    <string name="your_favourite_places">Your Favourite Places</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="todo">TODO</string>
    <string name="all_featured_locations">ALL FEATURED LOCATIONS</string>
    <string name="category_view">Category View</string>
    <string name="tourist_guide_app">Tourist Guide App</string>
    <string name="accomodation_amp_stay"><![CDATA[Accomodation & Stay]]></string>
    <string name="hotels_amp_lodges"><![CDATA[Hotels & Lodges]]></string>
    <string name="rent_car_bike">Rent Car Bike</string>
    <string name="cabs">Cabs</string>
    <string name="food_amp_beverages"><![CDATA[Food & Beverages]]></string>
    <string name="my_calander">My Calander</string>
    <string name="my_bucket_list">My Bucket List</string>
    <string name="my_notes">My Notes</string>
    <string name="contact_us">Contact Us</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="rate_us">Rate Us</string>
    <string name="open_drawer_content">Open Drawer Content Desc Res</string>
    <string name="close_drawer_content">Close Drawer Content Desc Rse</string>
    <string-array name="touristPlaceNames">
        <item>Gateway of India</item>
        <item>Sanjay Gandhi National Park</item>
        <item>Haji Ali Dargah</item>
        <item>Elephanta Caves</item>
        <item>Siddhivinayak Temple</item>
        <item>Chhatrapati Shivaji Terminus (CST)</item>
        <item>ISKCON Temple</item>
        <item>Shri Mahalakshmi Temple</item>
        <item>Powai Lake</item>
        <item>Kidzania</item>
        <item>EsselWorld</item>
        <item>Juhu Beach</item>
        <item>Marine Drive</item>
        <item>Chota Kashmir</item>
        <item>Worli Sea Face</item>
        <item>Hanging Gardens</item>
        <item>Madh Island</item>
        <item>Bandra-Worli Sea Link</item>
        <item>Colaba Causeway</item>
        <item>Mumbai Film City</item>
        <item>Snow World</item>
    </string-array>
    <string-array name="touristPlaceDescriptions">
        <item>Gateway of India, the best place to visit in Mumbai, Located next to the iconic
            Taj Mahal Palace and facing the vast Arabian Sea, the Gateway of India leaves you
            spellbound in every way possible.</item>
        <item>Sprawling over an area of 104 sq. km. of land, this is one of the most-visited
            national parks in Asia and because of this, I give it the 2nd spot among all the
            best places to visit in Mumbai. With all sorts of fun activities, this park can
            surely be a family entertainer.</item>
        <item>Haji Ali Dargah, one of the most popular religious shrines in Mumbai, is built
            right in the middle of the Arabian Sea. This grand edifice is made of white marbles
            and exemplifies the Indo-Islamic style of architecture. A walk through the causeway
            that connects the Dargah to the Lala Rajput Rai Marg is the main attraction of this
            place.</item>
        <item>Take a tour to this UNESCO World Heritage Site in Mumbai and get wonderstruck by
            the massive rock-cut caves that date back to several centuries. It has five caves
            dedicated to Hindu god Shiva and two caves depicting Buddhist architectures.</item>
        <item>One of the most frequented temples in Mumbai, the Siddhivinayak Temple is dedicated
            to Lord Ganesh. Devotees from across India including famous personalities from
            Bollywood and sports throng the temple to seek the blessings of Siddhivinayak
            Ganapati.</item>
        <item>Chatrapati Shivaji Terminus is a UNESCO World Heritage Site situated right in the
            heart of Mumbai. While you are here, don’t forget to take a photograph with your
            family and kids. And guess what, the magnificent CST is the most photographed
            building in India after Taj Mahal!</item>
        <item>Also known as Sri Sri Radha Rasabihari ji Temple, it is close to Juhu Beach and
            boasts 4 acres of land area. The gorgeously carved temple draws Hindu devotees in
            droves and hosts festivals like Ratha Yatra, Janmashtami, Radhasthami, Makarsankranti,
            and Gaura Purnima with great pomp and show.</item>
        <item>Built in 1831 by a Hindu merchant named Dhakji Dadaji, this beautiful temple attracts
            numerous devotees daily, and more so on Diwali and Navaratra. On these two occasions,
            Shri Mahalakshmi is believed to come alive and grant the wishes of her worshippers</item>
        <item>The beautiful and artificial Powai Lake is 12m deep and spread over 6.6 km. IIT
            Bombay is situated to the lake’s east and adds extra sparkle to it. Nature enthusiasts
            flock to this lake for its pretty pink-purple Balsam bushes and the wide variety of
            birds that you can see here</item>
        <item>Kidzania is an indoor amusement park made exclusively for kids with a unique concept
            of role-playing in a real city-like environment. Here, kids are required to perform a
            ‘job’ as a part of their role-playing. After successful completion of the job, they
            get paid in the form of kidzos money as an encouragement.</item>
        <item>Looking for adventure and thrill in the heart of bustling Mumbai? You can head to
            EsselWorld to have fun with the whole family. A wide array of vibrant and exciting
            rides await at this famous amusement park, to give you the adrenaline rush you want
            while shooting up in the air or plunging into cold water.</item>
        <item>Nothing can be more romantic than watching the crimson sun and the luminous orange
            sky on a breezy beach, with your loved one. Juhu Beach is one such spectacular place
            in Mumbai, often visited by couples who need a little romantic escape from the humdrum
            of city life.</item>
        <item>Walk hand in hand with your lover along the walkway at Marine Drive witnessing the
            sunset hues reflecting on the vast Arabian Sea. It is an ideal place to relax and
            spend some romantic moments on a beautiful evening. This is also one of the popular
            places to visit in Mumbai at night.</item>
        <item>If you are in search of a peaceful yet serene place to cherish some intimate moments
            with your partner, Chota Kashmir should be the right spot while you are in Mumbai.
            It has a beautifully landscaped garden and a placid lake that tranquillizes your body
            and mind</item>
        <item>Worli Sea Face, undoubtedly, is one of the favorite hangout spots for couples, where
            they can walk along the long stretched promenade in the evening or late night hours
            with a splendid view of the sea in the background.</item>
        <item>Every relationship deserves a break from monotonous daily routines. Take your
            significant other to this amazing Hanging Garden and unwind and slacken yourself amidst
            the flower beds, spectacular water fountains, and lush green animal shaped hedges.</item>
        <item>Are you looking for places to roam in Mumbai that will give you a break from your
            busy city life? Connect with rustic farmlands and charming fishing villages at Madh
            Island. Dotted with serene beaches like Aksa, Silver, Erangel and Dana Pani, Madh
            Island has a modest Portuguese fort as well</item>
        <item>A magnificent example of modern architecture, the Bandra-Worli Sea Link is a
            cable-stayed bridge that features viaducts made of pre-stressed concrete and steel on
            either side. It can support a total of 8 lanes of traffic (to and fro) and is a
            staggering 5.6 km in length.</item>
        <item>With shops after shops piled up with goodies, you are sure to have a great time
            shopping everything at Colaba Causeway from inexpensive clothes to sophisticated designer
            wears, home décor items to jewelry, and everything in between.</item>
        <item>Sprawling over approximately 100,000 sq. ft. area, the Dadasaheb Phalke Chitranagari
            also known as Mumbai Film City is a world of wonders where you can see theaters,
            gardens, lakes, recording rooms, and grounds that are leased out for Bollywood film
            shootings.</item>
        <item>Now, you can experience -10° C temperature in Mumbai with some frolicsome activities
            at Snow world, another great place to have serious fun with your friends. Feel the
            natural snowfall, slide through the ice in a rubber tube, play snowball wars with your
            buddies and many more fun filled activities</item>
    </string-array>
</resources>