<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/accomodation_amp_stay">
            <menu>
                <item
                    android:id="@+id/hotels_amp_lodges"
                    android:icon="@drawable/ic_hotel_black"
                    android:title="@string/hotels_amp_lodges" />

                <item
                    android:id="@+id/rent_car_bike"
                    android:icon="@drawable/ic_bike_black"
                    android:title="@string/rent_car_bike" />

                <item
                    android:id="@+id/cabs"
                    android:icon="@drawable/ic_cabs_grey"
                    android:title="@string/cabs" />
                <item
                    android:id="@+id/food_amp_beverages"
                    android:icon="@drawable/ic_baseline_fastfood_24"
                    android:title="@string/my_calander" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Aapke Baare Mai">
            <menu>
                <item
                    android:id="@+id/my_calander"
                    android:icon="@drawable/ic_baseline_date_range_24"
                    android:title="@string/my_calander" />

                <item
                    android:id="@+id/my_bucket_list"
                    android:icon="@drawable/ic_baseline_date_range_24"
                    android:title="@string/my_bucket_list" />

                <item
                    android:id="@+id/my_note"
                    android:icon="@drawable/ic_baseline_event_note_24"
                    android:title="@string/my_notes" />
            </menu>
        </item>

    </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/contact_us">
            <menu>
                <item
                    android:id="@+id/chat_bot"
                    android:icon="@drawable/ic_baseline_textsms_24"
                    android:title="@string/chat_bot" />

                <item
                    android:id="@+id/rate_us"
                    android:icon="@drawable/ic_baseline_star_rate_24"
                    android:title="@string/rate_us" />
            </menu>
        </item>
    </group>

</menu>