<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CAFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/open_sidebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_group_12"
            app:borderWidth="0dp" />

        <Button
            android:id="@+id/view_loc_by_category_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/search_button"
            android:text="@string/view_locations_by_category"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_search"
            app:borderWidth="0dp" />

    </LinearLayout>

    <GridView
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#CAFFFF"
        android:numColumns="1"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:layout_marginTop="-55dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:backgroundTint="#FFFFFF"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="40dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_group_15"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_your_trip"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:elevation="15dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="-50dp"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            app:cardCornerRadius="40dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:orientation="vertical"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#DF8888"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_nearby_icon"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore_nearby"
                    android:textColor="@color/text_color"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="3dp"
                    android:background="@drawable/ic_line_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="275dp"
                android:gravity="center"
                android:orientation="vertical"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#88DADF"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/india_icon"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore_india"
                    android:textColor="@color/text_color"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>